document steps for building jdk